@@ -8,6 +8,8 @@ Changes in 2.1.2
 * UPD: afpd: umask for home folders is no longer taken from startup umask.
 * UPD: afpd: dont and permissions with parent folder when creating new
        directories on "upriv" volumes.
+* UPD: afpd: use 'afpserver@fqdn' instead of 'afpserver/fqdn@realm'.
+       Prevents a crash in older GNU GSSAPI libs on eg. CentOS 5.x.
  
 Changes in 2.1.1
 ================
